--- a/game/index.html
+++ b/game/index.html
@@ -2,22 +2,9 @@
 <html>
 <head>
 	<title>Buildings</title>
-	<style>
-		/* Style for the buttons */
-		.button {
-			background-color: #4CAF50;
-			border: none;
-			color: white;
-			padding: 15px 32px;
-			text-align: center;
-			text-decoration: none;
-			display: inline-block;
-			font-size: 16px;
-			margin: 4px 2px;
-			cursor: pointer;
-			border-radius: 8px;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="./css/style.css">
+	<link rel="stylesheet" type="text/css" href="./css/index.css">
+	<link rel="stylesheet" type="text/css" href="./css/body.css">
 </head>
 <body>
 	<h1>Choose a Building</h1>
@@ -25,11 +12,13 @@
 		<!-- Buttons for each building -->
 		<button class="button" onclick="window.location.href='html/mine.html'">Mine</button>
 		<button class="button" onclick="window.location.href='html/shop.html'">Shop</button>
+		<button class="button" onclick="window.location.href='html/warehouse.html'">Warehouse</button>
 		<button class="button" onclick="window.location.href='html/factory.html'">Factory</button>
 		<button class="button" onclick="window.location.href='html/refinery.html'">Refinery</button>
 		<button class="button" onclick="window.location.href='html/laboratory.html'">Laboratory</button>
 		<button class="button" onclick="window.location.href='html/stockmarket.html'">Stock Market</button>
-		<button class="button" onclick="window.location.href='html/map.html'">Map</button>
+		<button class="button" onclick="window.location.href='html/map_space.html'">Map Space</button>
+		<button class="button" onclick="window.location.href='html/map_mine.html'">Map Mine</button>
 	</div>
 </body>
 </html>
